--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <footer class="bg-light text-center text-lg-start">
   <!-- Copyright -->
   <div class="text-center p-3">
-    <a class="text-dark" href="https://github.com/BYU-CS-260-Winter-2021/lab-1-photography-website-slinnscott">Github for this assignment</a>
+    <a class="text-dark" href="https://github.com/slinnscott/260cp2">Github for this assignment</a>
   </div>
   <!-- Copyright -->
 </footer>
